<resources>
    <string name="app_name">OBS Mesh</string>
    <string name="title_activity_home">Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="copyright">Powered By: DataSoft System Bangladesh ltd.</string>


    <!--login screen-->

    <string name="user_id">User ID</string>
    <string name="mobile_number">Mobile No</string>
    <string name="password">Password</string>
    <string name="login">Login</string>


</resources>
