<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="ds.mesh.project.auth.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/obs_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_text_rounded_border"
            android:drawableLeft="@drawable/ic_person_outline_white_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:gravity="left|center_vertical"
            android:hint="@string/user_id"
            android:paddingLeft="10dp"
            android:textColor="#ffffff"
            android:textColorHint="#77ffffff"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_rounded_border"
            android:drawableLeft="@drawable/ic_phone_android_white_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:gravity="left|center_vertical"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:textColor="#ffffff"
            android:textColorHint="#77ffffff"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_rounded_border"
            android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:gravity="left|center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="#ffffff"
            android:textColorHint="#77ffffff"
            android:textSize="14sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button_bg"
            android:onClick="onLoginButtonClicked"
            android:text="@string/login"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</RelativeLayout>
